bootstrap/signin.css
html,
body {
  height: 100%;
}

body {
  display: flex;
  align-items: center;
  padding-top: 40px;
  padding-bottom: 40px;
  background-image: url("/assets/login.png");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/*@keyframes example {
  0%   {margin-top:-800px;}
  100% {margin-top:0;}
}


.login-box {
  animation-name: example;
  animation-duration: 1s;
}*/ 

.form-signin {
  width: 100%;
  max-width: 330px;
  padding: 15px;
  margin: auto;
}

.form-signin .checkbox {
  font-weight: 400;
}

.form-signin .form-floating:focus-within {
  z-index: 2;
}

